Added async support for createPreviews Removed lombok dependency